Bug 1154950 - Share permanent atom and well-known symbol marking; r=sfink

--HG--
extra : rebase_source : 900f7055dbd7e8509e1cac83a6fe12e48ac85a6d